--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ before_script:
     else
       export DOCKER_TAG="${TRAVIS_BRANCH}";
     fi
+  - sed -i -e '/^$/d' -e 's/^[ \t]*//' -e '/^#/d' Dockerfile
 
 script:
   - >
