--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ before_install:
 
 install:
   - sed -i -e '/^$/d' -e 's/^[ \t]*//' -e '/^#/d' Dockerfile
-  - chmod 0544 rootfs/usr/local/bin/*.sh
+#  - chmod 0544 rootfs/usr/local/bin/*.sh
 
 script:
   - >
