--- a/rootfs/etc/supervisor/supervisord.conf
+++ b/rootfs/etc/supervisor/supervisord.conf
@@ -13,6 +13,7 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
+priority=100
 command=apache2-foreground
 
 [program:cron]
@@ -20,4 +21,5 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
+priority=200
 command=cron -f
