--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ before_install:
   - sudo apt-get upgrade -q -y
   - docker version
   - docker network inspect bridge
+  - docker info
 
 install:
   - sed -i -e '/^$/d' -e 's/^[ \t]*//' -e '/^#/d' Dockerfile
