--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,11 @@ before_install:
   - docker version
   - docker network inspect bridge
   - docker info
-
+  - sudo /sbin/sysctl net.ipv4.conf.all.forwarding
+  - sudo /sbin/sysctl -w net.ipv4.conf.all.forwarding=1
+  - docker network inspect bridge
+  - docker info
+  
 install:
   - sed -i -e '/^$/d' -e 's/^[ \t]*//' -e '/^#/d' Dockerfile
 #  - chmod 0544 rootfs/usr/local/bin/*.sh
