--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
 language: bash
 dist: trusty
+group: travis_latest
 sudo: required
+
+addons:
+  apt:
+    packages:
+      - docker-ce
 
 branches:
   only:
@@ -25,16 +31,15 @@ env:
       DOCKER_VERSION="`(docker pull library/nextcloud:apache && docker run -it --rm library/nextcloud:apache /bin/bash -c env) | grep NEXTCLOUD_VERSION | awk -F '=' {'print $2'}`"
 
 before_install:
-  - sudo apt-get update -q
-  - sudo apt-get upgrade -q -y
   - docker version
-  - sudo /sbin/sysctl net.ipv4.conf.all.forwarding
   - sudo /sbin/sysctl -w net.ipv4.conf.all.forwarding=1
   - sudo /sbin/sysctl net.ipv4.conf.all.forwarding
 
 install:
+
+before_script:
   - sed -i -e '/^$/d' -e 's/^[ \t]*//' -e '/^#/d' Dockerfile
-#  - chmod 0544 rootfs/usr/local/bin/*.sh
+  #- chmod 0544 rootfs/usr/local/bin/*.sh
 
 script:
   - >
