--- a/rootfs/etc/supervisor/supervisord.conf
+++ b/rootfs/etc/supervisor/supervisord.conf
@@ -3,8 +3,8 @@ nodaemon=true
 logfile=/var/log/supervisord/supervisord.log
 pidfile=/var/run/supervisord/supervisord.pid
 childlogdir=/var/log/supervisord/
-logfile_maxbytes=10MB                           ; maximum size of logfile before rotation
-logfile_backups=5                               ; number of backed up logfiles
+logfile_maxbytes=10MB
+logfile_backups=5
 loglevel=error
 user=root
 
@@ -22,4 +22,4 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 priority=200
-command=cron -f
+command=/cron.sh
