--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ sudo: required
 if: |
   branch = master AND \
   NOT commit_message =~ /readme.md/ AND \
-  NOT commit_message =~ /docker-compose.yml/
+  NOT commit_message =~ /docker-compose.yml/ OR \
+  TRAVIS_EVENT_TYPE = cron
 
 addons:
   apt:
