--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,8 @@ env:
       DOCKER_VERSION="$((docker pull library/nextcloud:apache && docker run -it --rm library/nextcloud:apache /bin/bash -c env) | grep NEXTCLOUD_VERSION | awk -F '=' {'print $2'})"
 
 before_install:
+  - echo ${TRAVIS_EVENT_TYPE}
+  - echo ${event}
   - docker version
   - sudo /sbin/sysctl -w net.ipv4.conf.all.forwarding=1
 
