--- a/rootfs/etc/supervisor/supervisord.conf
+++ b/rootfs/etc/supervisor/supervisord.conf
@@ -1,10 +1,8 @@
 [supervisord]
 nodaemon=true
-logfile=/var/log/supervisord/supervisord.log
 pidfile=/var/run/supervisord/supervisord.pid
-childlogdir=/var/log/supervisord/
-logfile_maxbytes=10MB
-logfile_backups=5
+logfile=/dev/null
+logfile_maxbytes=0
 loglevel=error
 user=root
 
