--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-dist: xenial
+dist: bionic
 group: travis_latest
 
 if: |
@@ -26,9 +26,8 @@ env:
     - VCS_REF="$(git rev-parse --short HEAD)"
     - VCS_URL="$(git remote get-url origin | head -c-5)"
 
-  matrix:
     - DOCKER_TAG="latest"
-      DOCKER_VERSION="$((docker pull library/nextcloud:apache && docker run -it --rm library/nextcloud:apache /bin/bash -c env) | grep NEXTCLOUD_VERSION | awk -F '=' {'print $2'})"
+    - DOCKER_VERSION="$((docker pull library/nextcloud:apache && docker run -it --rm library/nextcloud:apache /bin/bash -c env) | grep NEXTCLOUD_VERSION | awk -F '=' {'print $2'})"
 
 before_install:
   - sudo /sbin/sysctl -w net.ipv4.conf.all.forwarding=1
